--- a/ProgramManager/ProgramManager.csproj
+++ b/ProgramManager/ProgramManager.csproj
@@ -55,7 +55,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModel\ViewModelPackage.cs" />
+    <Compile Include="Model\CategoryAccess.cs" />
+    <Compile Include="Model\CategoryModel.cs" />
+    <Compile Include="Model\PackageAccess.cs" />
+    <Compile Include="ViewModel\Base\PropertiesChanged.cs" />
+    <Compile Include="ViewModel\Base\DeclareCommand.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\Base\RelayCommand.cs" />
     <Page Include="CreatePackWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -71,7 +77,7 @@
     <Compile Include="CreatePackWindow.xaml.cs">
       <DependentUpon>CreatePackWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Data\PackageModel.cs" />
+    <Compile Include="Model\PackageModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -119,6 +125,10 @@
     <Resource Include="Resources\Icons\Rename_48px.png" />
     <Resource Include="Resources\Icons\Search_48px.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\19572.jpg" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
