Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,4 @@
 ################################################################################
 
 /ProgramManager/obj/Debug
-*.suo
-/.vs/ProgramManager/v14/*.suo
-/ProgramManager/obj/Debug
+/.vs/ProgramManager/v14/.suo
