--- a/ProgramManager/ProgramManager.csproj
+++ b/ProgramManager/ProgramManager.csproj
@@ -55,33 +55,35 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\KeywordToTextConverter.cs" />
+    <Compile Include="Enums\Keywords.cs" />
+    <Compile Include="MarkupExtensions\EnumValues.cs" />
     <Compile Include="Models\CategoryAccess.cs" />
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\PackageAccess.cs" />
     <Compile Include="ViewModels\Base\PropertiesChanged.cs" />
     <Compile Include="ViewModels\Base\DeclareCommand.cs" />
-    <Compile Include="ViewModels\CreatePackageViewModel.cs" />
+    <Compile Include="ViewModels\DialogPackagesViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
-    <Page Include="Views\CreatePackageWindow.xaml">
+    <Page Include="Views\DialogPackages.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Views\MainView.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\CreatePackageWindow.xaml.cs">
-      <DependentUpon>CreatePackageWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Models\PackageModel.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="Views\DialogPackages.xaml.cs">
+      <DependentUpon>DialogPackages.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MainView.xaml.cs">
+      <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -107,9 +109,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\Aard.png" />
@@ -160,9 +159,7 @@
     <Resource Include="Resources\Icons\Category_48px_1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Converters\" />
     <Folder Include="Filters\" />
-    <Folder Include="Gender\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
