--- a/ProgramManager/ProgramManager.csproj
+++ b/ProgramManager/ProgramManager.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\CategoryAccess.cs" />
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\PackageAccess.cs" />
+    <Compile Include="Models\TextFieldModel.cs" />
     <Compile Include="ViewModels\Base\PropertiesChanged.cs" />
     <Compile Include="ViewModels\Base\DeclareCommand.cs" />
     <Compile Include="ViewModels\DialogPackagesViewModel.cs" />
@@ -89,6 +90,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\PackageModel.cs" />
+    <Compile Include="ViewModels\TextFieldViewModel.cs" />
     <Compile Include="Views\DialogPackages.xaml.cs">
       <DependentUpon>DialogPackages.xaml</DependentUpon>
     </Compile>
