--- a/ProgramManager/ProgramManager.csproj
+++ b/ProgramManager/ProgramManager.csproj
@@ -57,6 +57,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Contracts\BaseConnector.cs" />
+    <Compile Include="Contracts\PackageEventArgs.cs" />
     <Compile Include="Converters\KeywordToTextConverter.cs" />
     <Compile Include="Enums\Keywords.cs" />
     <Compile Include="MarkupExtensions\EnumValues.cs" />
@@ -70,6 +72,7 @@
     <Compile Include="ViewModels\Base\PropertiesChanged.cs" />
     <Compile Include="ViewModels\DeclareCommand.cs" />
     <Compile Include="ViewModels\DialogPackagesViewModel.cs" />
+    <Compile Include="Contracts\IConnector.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Page Include="Views\DialogPackages.xaml">
