--- a/ProgramManager/ProgramManager.csproj
+++ b/ProgramManager/ProgramManager.csproj
@@ -82,27 +82,30 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Contracts\ISearchable.cs" />
+    <Compile Include="Converters\FieldConverter.cs" />
+    <Compile Include="Enums\TFieldTypes.cs" />
     <Compile Include="Filters\FilterProperties.cs" />
-    <Compile Include="Models\NewModel\CategoryModel.cs" />
-    <Compile Include="Models\NewModel\WrapPackage.cs" />
-    <Compile Include="Models\NewModel\DriverModel.cs" />
-    <Compile Include="Models\NewModel\GameModel.cs" />
-    <Compile Include="Models\NewModel\ModModel.cs" />
-    <Compile Include="Models\NewModel\PackageBase.cs" />
-    <Compile Include="Models\NewModel\PluginModel.cs" />
-    <Compile Include="Models\NewModel\ProgramModel.cs" />
+    <Compile Include="Converters\ConverterBase.cs" />
+    <Compile Include="Models\CategoryModel.cs" />
+    <Compile Include="Models\PackageDerives\PackageAccess.cs" />
+    <Compile Include="Models\WrapPackage.cs" />
+    <Compile Include="Models\PackageDerives\DriverModel.cs" />
+    <Compile Include="Models\PackageDerives\GameModel.cs" />
+    <Compile Include="Models\PackageDerives\ModModel.cs" />
+    <Compile Include="Models\PackageDerives\PackageBase.cs" />
+    <Compile Include="Models\PackageDerives\PluginModel.cs" />
+    <Compile Include="Models\PackageDerives\ProgramModel.cs" />
     <Compile Include="ViewModels\Base\BaseConnector.cs" />
     <Compile Include="ViewModels\Base\ConnectorEventArgs.cs" />
     <Compile Include="Converters\KeywordToTextConverter.cs" />
-    <Compile Include="Enums\TFieldType.cs" />
     <Compile Include="Enums\Keywords.cs" />
-    <Compile Include="MarkupExtensions\EnumValues.cs" />
+    <Compile Include="Converters\NumberToStringConverterExtension.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\DataPanelModel.cs" />
-    <Compile Include="Models\PackageAccess.cs" />
+    <Compile Include="Models\PackageMutator.cs" />
     <Compile Include="Models\TextFieldModel.cs" />
     <Compile Include="ViewModels\Base\PropertiesChanged.cs" />
-    <Compile Include="ViewModels\MainModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PackagesDialogPartial.cs" />
     <Compile Include="ViewModels\PackagesDialogViewModel.cs" />
     <Compile Include="Models\InfoMessage.cs" />
