--- a/ProgramManager/ProgramManager.csproj
+++ b/ProgramManager/ProgramManager.csproj
@@ -83,34 +83,38 @@
     </ApplicationDefinition>
     <Compile Include="Contracts\ISearchable.cs" />
     <Compile Include="Converters\FieldConverter.cs" />
-    <Compile Include="Enums\TFieldTypes.cs" />
+    <Compile Include="Enums\FieldTypes.cs" />
     <Compile Include="Filters\FilterProperties.cs" />
     <Compile Include="Converters\ConverterBase.cs" />
     <Compile Include="Models\CategoryModel.cs" />
-    <Compile Include="Models\PackageDerives\PackageAccess.cs" />
+    <Compile Include="Models\PackageModel\PackageAccess.cs" />
+    <Compile Include="Models\BaseXML.cs" />
     <Compile Include="Models\WrapPackage.cs" />
-    <Compile Include="Models\PackageDerives\DriverModel.cs" />
-    <Compile Include="Models\PackageDerives\GameModel.cs" />
-    <Compile Include="Models\PackageDerives\ModModel.cs" />
-    <Compile Include="Models\PackageDerives\PackageBase.cs" />
-    <Compile Include="Models\PackageDerives\PluginModel.cs" />
-    <Compile Include="Models\PackageDerives\ProgramModel.cs" />
+    <Compile Include="Models\PackageModel\DriverModel.cs" />
+    <Compile Include="Models\PackageModel\GameModel.cs" />
+    <Compile Include="Models\PackageModel\ModModel.cs" />
+    <Compile Include="Models\PackageModel\PackageBase.cs" />
+    <Compile Include="Models\PackageModel\PluginModel.cs" />
+    <Compile Include="Models\PackageModel\ProgramModel.cs" />
     <Compile Include="ViewModels\Base\BaseConnector.cs" />
     <Compile Include="ViewModels\Base\ConnectorEventArgs.cs" />
     <Compile Include="Converters\KeywordToTextConverter.cs" />
     <Compile Include="Enums\Keywords.cs" />
     <Compile Include="Converters\NumberToStringConverterExtension.cs" />
-    <Compile Include="Models\BaseModel.cs" />
-    <Compile Include="Models\DataPanelModel.cs" />
+    <Compile Include="ViewModels\Base\BaseManager.cs" />
     <Compile Include="Models\PackageMutator.cs" />
     <Compile Include="Models\TextFieldModel.cs" />
     <Compile Include="ViewModels\Base\PropertiesChanged.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PackagesDialogPartial.cs" />
     <Compile Include="ViewModels\PackagesDialogViewModel.cs" />
-    <Compile Include="Models\InfoMessage.cs" />
+    <Compile Include="ViewModels\Base\InfoMessage.cs" />
     <Compile Include="ViewModels\InputNameViewModelcs.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
+    <Page Include="Views\DialogPacks\TagDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\PackagesDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -135,8 +139,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\PackageModel.cs" />
     <Compile Include="ViewModels\PackagesDialogVisibility.cs" />
+    <Compile Include="ViewModels\TagDialogViewModel.cs" />
+    <Compile Include="Views\DialogPacks\TagDialog.xaml.cs">
+      <DependentUpon>TagDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PackagesDialog.xaml.cs">
       <DependentUpon>PackagesDialog.xaml</DependentUpon>
     </Compile>
