--- a/ProgramManager/packages.config
+++ b/ProgramManager/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AsyncMvvmMessenger" version="0.1.0.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net452" />
   <package id="Portable.MvvmLightLibs" version="4.4.32.1" targetFramework="net452" />
 </packages>
